@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-09-13T00:53:01Z",
+  "timestamp" : "2025-09-18T00:55:46Z",
   "count_outdated" : 110,
   "uniques_outdated" : 92,
-  "count" : 111,
-  "uniques" : 93,
+  "count" : 112,
+  "uniques" : 94,
   "clones" : [
     {
       "timestamp": "2025-09-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
